--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
   <head>
   <title> Architect Website</title>
-  <link rel="stylesheet" type="text/css" href="C:\Users\Molly\Desktop\Coding\Architects\CSS\styles.css"> 
+  <link rel="stylesheet" type="text/css" href="css/styles.css"> 
   </head>
 
   <body>
