--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" type="text/css" href="https://github.com/MollyCodesOMG/architect-website/blob/master/CSS/styles.css"> 
+        <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
   <title> Architect Website</title>
   </head>
 
